# Fencing-recording-apparatus

./: .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  app.c
include/: gpio_wrappers.h  score_display.h  speaker.h  time_display.h
lib/: CMakeLists.txt
lib/access_point/: CMakeLists.txt  access_point.c  access_point.h  lwipopts.h
lib/access_point/dhcpserver/: dhcpserver.c  dhcpserver.h
lib/access_point/dnsserver/: dnsserver.c
src/: CMakeLists.txt  gpio_wrappers.c  score_display.c  speaker.c  time_display.c
